# ripmark

./: Cargo.toml  README.md
crates/ripmark-cli/: Cargo.toml
crates/ripmark-cli/src/: main.rs
crates/ripmark-core/: Cargo.toml
crates/ripmark-core/src/: analysis.rs  bypass.rs  carriers.rs  codebook.rs  denoise.rs  detect.rs  fft.rs  lib.rs
scripts/: compare_reverse_synthid.py
