[workspace]
members = ["crates/ripmark-core", "crates/ripmark-cli"]
resolver = "2"

[workspace.dependencies]
rustfft = "6.4.1"
ndarray = "0.17.2"
image = "0.25.10"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = { version = "2.0.1", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
indicatif = "0.18.4"
clap = { version = "4.6.0", features = ["derive"] }
